# BinaryBLAS

./: README.md
bnn_engine/: CMakeLists.txt  benchmark_compare.py  build.sh  test_linear.jl
bnn_engine/benchmarks/: bench_conv2d.jl  bench_conv2d.py  bench_linear.jl  bench_linear.py  bench_maxpool2d.jl  benchmark_compare.py  benchmark_linear.py
bnn_engine/bindings/julia/: bind_julia.cpp
bnn_engine/bindings/python/: bind_pytorch.cpp
bnn_engine/include/: kernel_conv2d_nhwc.hpp  kernel_linear.hpp  kernel_linear_server.hpp  kernel_maxpool.hpp  kernel_maxpool2d_nhwc.hpp  kernel_pack.hpp
bnn_engine/tests/: test_conv2d.jl  test_linear.jl  test_linear.py  test_linear_inplace.py  test_maxpool2d_nhwc.jl  test_pack.jl
julia/BinaryBLAS/: Manifest.toml  Project.toml
julia/BinaryBLAS/src/: BinaryBLAS.jl
